--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,17 +48,17 @@ stages:
             displayName: helm lint
 
           - task: HelmDeploy@0
-            displayName: "helm package"
             inputs:
-              command: "package"
-              chartPath: "charts/spring-boot-websocket-chat-demo"
-              save: false
+              command: 'package'
+              chartPath: 'charts/spring-boot-websocket-chat-demo'
+              destination: '$(Pipeline.Workspace)'
           
           - task: PublishPipelineArtifact@1
             inputs:
               targetPath: '$(Pipeline.Workspace)'
               artifact: 'drop'
               publishLocation: 'pipeline'
+            displayName: 'publish artifacts'
 
   - stage: DeployToDev
     displayName: Deploy to Dev
@@ -77,7 +77,9 @@ stages:
                 - task: DownloadPipelineArtifact@2
                   inputs:
                     buildType: 'current'
+                    artifactName: 'drop'
                     targetPath: '$(Pipeline.Workspace)'
+                  displayName: 'download build artifacts'
 
                 - task: HelmInstaller@0
                   displayName: "Install Helm 3.5.1"
@@ -86,8 +88,6 @@ stages:
                     checkLatestHelmVersion: false
                     installKubectl: true
                     kubectlVersion: "1.17.1"
-                - bash: |
-                    ls -la
                     
                 - task: HelmDeploy@0
                   inputs:
