--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -108,7 +108,7 @@ stages:
                     attempt_counter=0
                     max_attempts=5
 
-                    until $(curl --output /dev/null --silent --head --fail http://"$(hostname)"/); do
+                    until $(curl --output /dev/null --silent --head --fail https://"$(hostname)"/); do
                       if [ ${attempt_counter} -eq ${max_attempts} ];then
                         echo "Max attempts reached"
                         exit 1
