--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -139,7 +139,7 @@ stages:
                   env:
                     APPLITOOLS_API_KEY: $(APPLITOOLS_API_KEY)
                     RUNWHERE: pipeline
-                    TEST_START_PAGE: https://$(hostname)
+                    TEST_START_PAGE: "https://$(hostname)"
                   displayName: "Run Visual Tests"
                     
   - stage: PromoteToProd
