--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -178,6 +178,6 @@ stages:
                     namespace: 'jfrog'
                     command: 'upgrade'
                     chartType: 'FilePath'
-                    chartPath: '**/.tgz'
+                    chartPath: '$(Pipeline.Workspace)/drop/spring-boot-websocket-chat-demo-v0.1.0.tgz'
                     releaseName: 'azd-chattybot'
                     overrideValues: 'image.repository=ttacrdl53e2sgw5z5i.azurecr.io/$(Build.Repository.Name),image.tag=$(Build.BuildId),ingress.hostname=azdchatbot.k8s.az.jessicadeen.com,buildID=$(Build.BuildId)'
